:bug: fix a bug in the header-bar alignment

--- a/css/containers/header-bar.css
+++ b/css/containers/header-bar.css
@@ -7,6 +7,7 @@
 .header-bar > .container .image {
   width: 200px;
   height: 50px;
+  display: inline;
 }
 
 .header-bar .content {
